# Prometheus

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/experiment/: baseline_multitask.toml  legacy_dual.toml
docs/: Architecture.md  architecture.md
notebooks/: train.ipynb
scripts/: audit_puma.py  smoke_train_nuclei.py  smoke_train_tissue.py  train_nuclei.py  train_puma.py  train_tissue.py
src/prometheus/: __init__.py  api.py  config.py
src/prometheus/blocks/: __init__.py  attention.py  convnext_block.py  decoder_block.py  minkowski_block.py  moe.py  transformer_block.py
src/prometheus/cli/: __init__.py  main.py
src/prometheus/config/: __init__.py  common.py  loader.py  project.py  schemas.py
src/prometheus/data/: __init__.py  collate.py  puma_dataset.py  spatial.py  transforms.py
src/prometheus/domain/: __init__.py  geometry.py  labels.py  samples.py  types.py
src/prometheus/engine/: __init__.py  checkpointing.py  evaluator.py  trainer.py
src/prometheus/inference/: __init__.py  nuclei_decoder.py  pipeline.py  postprocess.py  predictor.py
src/prometheus/io/: __init__.py  puma_json.py  tissue_tiff.py
tests/: test_blocks.py  test_config.py  test_dataset.py  test_dual.py  test_losses.py  test_metrics.py  test_moe.py  test_transforms.py  test_utils.py
tests/contracts/: test_core_imports.py
tests/integration/: test_engine_smoke.py
tests/unit/: test_checkpointing.py  test_cli_config.py  test_engine_checkpointing.py  test_inference_submission.py  test_prometheus_predictor.py  test_puma_io.py  test_utils.py
(+94 files in other folders)
