[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus"
version = "0.2.0"
description = "Medical image segmentation with U-Net + Transformer + Mixture of Experts"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "tifffile>=2023.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
